--- a/templatemo_556_catalog_z/index.html
+++ b/templatemo_556_catalog_z/index.html
@@ -17,18 +17,17 @@ https://templatemo.com/tm-556-catalog-z
 </head>
 <body>
     <!-- Page Loader -->
-    <div id="loader-wrapper">
+    <!--<div id="loader-wrapper">
         <div id="loader"></div>
 
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
 
-    </div>
+    </div>-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-film mr-2"></i>
-                Catalog-Z
+                <img src="./img/logotipo.png" width="200px" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -36,7 +35,7 @@ https://templatemo.com/tm-556-catalog-z
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link nav-link-1 active" aria-current="page" href="index.html">Photos</a>
+                    <a class="nav-link nav-link-1 active" aria-current="page" href="index.html">Categorias</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-link-2" href="videos.html">Videos</a>
@@ -54,7 +53,7 @@ https://templatemo.com/tm-556-catalog-z
 
     <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="img/hero.jpg">
         <form class="d-flex tm-search-form">
-            <input class="form-control tm-search-input" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control tm-search-input" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
             <button class="btn btn-outline-success tm-search-btn" type="submit">
                 <i class="fas fa-search"></i>
             </button>
@@ -64,7 +63,7 @@ https://templatemo.com/tm-556-catalog-z
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
-                Latest Photos
+                Categorias Trabalhistas
             </h2>
             <div class="col-6 d-flex justify-content-end align-items-center">
                 <form action="" class="tm-text-primary">
@@ -75,10 +74,10 @@ https://templatemo.com/tm-556-catalog-z
         <div class="row tm-mb-90 tm-gallery">
         	<div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-03.jpg" alt="Image" class="img-fluid">
+                    <img src="img/administracao.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Clocks</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <h2>Administração</h2>
+                        <a href="photo-detail.html">Ver vaga</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -88,10 +87,10 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-04.jpg" alt="Image" class="img-fluid">
+                    <img src="img/agricultura.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Plants</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <h2>agricultura</h2>
+                        <a href="photo-detail.html">Ver vaga</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -101,10 +100,10 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-05.jpg" alt="Image" class="img-fluid">
+                    <img src="img/biologia.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Morning</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <h2>Biologia</h2>
+                        <a href="photo-detail.html">Ver vaga</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -112,12 +111,13 @@ https://templatemo.com/tm-556-catalog-z
                     <span>12,460 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-06.jpg" alt="Image" class="img-fluid">
+                    <img src="img/cinema.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Pinky</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <h2>Cinema</h2>
+                        <a href="photo-detail.html">Ver mais</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -128,9 +128,9 @@ https://templatemo.com/tm-556-catalog-z
             
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-01.jpg" alt="Image" class="img-fluid">
+                    <img src="img/construcao-civil.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Hangers</h2>
+                        <h2>Construção civil</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -139,11 +139,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>16,008 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-02.jpg" alt="Image" class="img-fluid">
+                    <img src="img/eletrica.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Perfumes</h2>
+                        <h2>Elétrica</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -152,11 +153,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>12,860 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-07.jpg" alt="Image" class="img-fluid">
+                    <img src="img/enfermagem.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Bus</h2>
+                        <h2>Emfermagem</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -165,11 +167,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>10,900 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-08.jpg" alt="Image" class="img-fluid">
+                    <img src="img/Engenharia.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>New York</h2>
+                        <h2>Engenharia</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -178,11 +181,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>11,300 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-09.jpg" alt="Image" class="img-fluid">
+                    <img src="img/Industria.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Abstract</h2>
+                        <h2>Industria</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -191,11 +195,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>42,700 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-10.jpg" alt="Image" class="img-fluid">
+                    <img src="img/informatica.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Flowers</h2>
+                        <h2>Informatica</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -204,11 +209,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>11,402 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-11.jpg" alt="Image" class="img-fluid">
+                    <img src="img/medicina.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Rosy</h2>
+                        <h2>Medicina</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -217,11 +223,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>32,906 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-12.jpg" alt="Image" class="img-fluid">
+                    <img src="img/Musico.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Rocki</h2>
+                        <h2>Musica</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -230,11 +237,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>50,700 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-13.jpg" alt="Image" class="img-fluid">
+                    <img src="img/pesca.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Purple</h2>
+                        <h2>Pesca</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -243,11 +251,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>107,510 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-14.jpg" alt="Image" class="img-fluid">
+                    <img src="img/quimica.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Sea</h2>
+                        <h2>Quimica</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -256,11 +265,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>118,006 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-15.jpg" alt="Image" class="img-fluid">
+                    <img src="img/seguranca.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Turtle</h2>
+                        <h2>Segurança</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
@@ -269,11 +279,12 @@ https://templatemo.com/tm-556-catalog-z
                     <span>121,300 views</span>
                 </div>
             </div>
+
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-16.jpg" alt="Image" class="img-fluid">
+                    <img src="img/social_midia.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Peace</h2>
+                        <h2>Social Midia</h2>
                         <a href="photo-detail.html">View more</a>
                     </figcaption>                    
                 </figure>
