--- a/templatemo_556_catalog_z/contact.html
+++ b/templatemo_556_catalog_z/contact.html
@@ -17,18 +17,17 @@ https://templatemo.com/tm-556-catalog-z
 </head>
 <body>
     <!-- Page Loader -->
-    <div id="loader-wrapper">
+    <!--<div id="loader-wrapper">
         <div id="loader"></div>
 
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
 
-    </div>
+    </div>-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <i class="fas fa-film mr-2"></i>
-                Catalog-Z
+            <a class="navbar-brand" href="#">
+                <img src="./img/logotipo.png" width="200px" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
