--- a/templatemo_556_catalog_z/videos.html
+++ b/templatemo_556_catalog_z/videos.html
@@ -17,18 +17,17 @@ https://templatemo.com/tm-556-catalog-z
 </head>
 <body>
     <!-- Page Loader -->
-    <div id="loader-wrapper">
+    <!--<div id="loader-wrapper">
         <div id="loader"></div>
 
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
 
-    </div>
+    </div>-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <i class="fas fa-film mr-2"></i>
-                Catalog-Z
+            <a class="navbar-brand" href="#">
+                <img src="./img/logotipo.png" width="200px" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -36,7 +35,7 @@ https://templatemo.com/tm-556-catalog-z
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link nav-link-1" href="index.html">Photos</a>
+                    <a class="nav-link nav-link-1" href="index.html">Categorias</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-link-2 active" aria-current="page" href="videos.html">Videos</a>
