Acrescentando a página de cadastro
Acrescentei uma página de cadastro e realizei algumas modificações no front como rodapé e navbar

--- a/templatemo_556_catalog_z/about.html
+++ b/templatemo_556_catalog_z/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalog-Z About page</title>
+    <title>First work</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
@@ -35,16 +35,19 @@ https://templatemo.com/tm-556-catalog-z
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link nav-link-1" href="index.html">Photos</a>
+                    <a class="nav-link nav-link-1" href="index.html">Categoria</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-link-2" href="videos.html">Videos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-3 active" aria-current="page" href="about.html">About</a>
+                    <a class="nav-link nav-link-3 active" aria-current="page" href="about.html">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-4" href="contact.html">Contact</a>
+                    <a class="nav-link nav-link-4" href="contact.html">Contato</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-4" href="cadastro.html">Faça o seu cadastro</a>
                 </li>
             </ul>
             </div>
