--- a/templatemo_556_catalog_z/index.html
+++ b/templatemo_556_catalog_z/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalog-Z Bootstrap 5.0 HTML Template</title>
+    <title>First Work</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
@@ -41,10 +41,13 @@ https://templatemo.com/tm-556-catalog-z
                     <a class="nav-link nav-link-2" href="videos.html">Videos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-3" href="about.html">About</a>
+                    <a class="nav-link nav-link-3" href="about.html">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-4" href="contact.html">Contact</a>
+                    <a class="nav-link nav-link-4" href="contact.html">Contato</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-4" href="cadastro.html">Faça o seu cadastro</a>
                 </li>
             </ul>
             </div>
@@ -296,14 +299,14 @@ https://templatemo.com/tm-556-catalog-z
         </div> <!-- row -->
         <div class="row tm-mb-90">
             <div class="col-12 d-flex justify-content-between align-items-center tm-paging-col">
-                <a href="javascript:void(0);" class="btn btn-primary tm-btn-prev mb-2 disabled">Previous</a>
+                <a href="javascript:void(0);" class="btn btn-primary tm-btn-prev mb-2 disabled">Anterior</a>
                 <div class="tm-paging d-flex">
                     <a href="javascript:void(0);" class="active tm-paging-link">1</a>
                     <a href="javascript:void(0);" class="tm-paging-link">2</a>
                     <a href="javascript:void(0);" class="tm-paging-link">3</a>
                     <a href="javascript:void(0);" class="tm-paging-link">4</a>
                 </div>
-                <a href="javascript:void(0);" class="btn btn-primary tm-btn-next">Next Page</a>
+                <a href="javascript:void(0);" class="btn btn-primary tm-btn-next">Próxima Página</a>
             </div>            
         </div>
     </div> <!-- container-fluid, tm-container-content -->
@@ -312,9 +315,10 @@ https://templatemo.com/tm-556-catalog-z
         <div class="container-fluid tm-container-small">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-12 px-5 mb-5">
-                    <h3 class="tm-text-primary mb-4 tm-footer-title">About Catalog-Z</h3>
-                    <p>Catalog-Z is free <a rel="sponsored" href="https://v5.getbootstrap.com/">Bootstrap 5</a> Alpha 2 HTML Template for video and photo websites. You can freely use this TemplateMo layout for a front-end integration with any kind of CMS website.</p>
+                    <h3 class="tm-text-primary mb-4 tm-footer-title">Sobre o First Work</h3>
+                    <p>Estamos Construindo essa plataforma que vai auxiliar jovens inexperientes a ingressar no mercado de trabalho</p>
                 </div>
+                <!-- 
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Our Links</h3>
                     <ul class="tm-footer-links pl-0">
@@ -323,7 +327,7 @@ https://templatemo.com/tm-556-catalog-z
                         <li><a href="#">Our Company</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <ul class="tm-social-links d-flex justify-content-end pl-0 mb-5">
                         <li class="mb-2"><a href="https://facebook.com"><i class="fab fa-facebook"></i></a></li>
