--- a/FirstWork/about.html
+++ b/FirstWork/about.html
@@ -59,20 +59,28 @@ https://templatemo.com/tm-556-catalog-z
     <div class="container-fluid tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-12 tm-text-primary">
-                About Catalog-Z Website Template
+                Nossa startup 
             </h2>
         </div>
         <div class="row tm-mb-74 tm-row-1640">            
             <div class="col-lg-5 col-md-6 col-12 mb-3">
                 <img src="img/about.jpg" alt="Image" class="img-fluid">
             </div>
-            <div class="col-lg-7 col-md-6 col-12">
+            <div class="col-md-6 col-12">
                 <div class="tm-about-img-text">
                     <p class="mb-4">
-                  You may support TemplateMo website by making <a href="https://paypal.me/templatemo" target="_parent" rel="sponsored">a small contribution</a> via PayPal. This will be helpful for us. We hope you like this Catalog-Z photo / video template for your website. We are making new templates regularly for you. Please come back and visit our <a rel="sponsored" href="https://templatemo.com" target="_parent">TemplateMo website</a> again. </p>
-                    <p>
-                        Credits go to Pexels and Unsplash for photos and video used in this template. Catalog-Z is free <a rel="sponsored" href="https://v5.getbootstrap.com/">Bootstrap 5</a> Alpha 2 HTML Template designed for video and photo websites.</p> 
-                    <p>You are <b>allowed</b> to use this template for your commercial or non-commercial websites. You can integrate it with any kind of CMS website. You are <b>NOT allowed</b> to redistribute the downloadable template ZIP file on any template collection website. Please <a rel="nofollow" href="https://templatemo.com/contact" target="_parent">contact us</a> for more information. Thank you.</p>
+
+                        
+
+                       
+                                   O nosso site vai ajudar pessoas a se conectarem a empresas com visão no futuro, dando oportunidades para novos profissionais recém formados que estão ingressando no mercado de trabalho.
+                                </p><p class="mb-4">
+
+                                Sabemos que novos trabalhadores podem ajudar as empresas a adquirir aprendizado para ambos os lados, responsabilidade social, profissionais sem vícios e estimular os estudos.</p>
+
+                                <p class="mb-4">
+                                Sabendo disso vamos focar em ajudar esse contato entre empresa e candidato</p>
+
                 </div>                
             </div>
         </div>
