--- a/FirstWork/about.html
+++ b/FirstWork/about.html
@@ -62,6 +62,7 @@ https://templatemo.com/tm-556-catalog-z
                 Nossa startup 
             </h1>
         </div>
+        <br/>
         <div class="row tm-mb-74 tm-row-1640">            
             <div class="col-lg-5 col-md-6 col-12 mb-3">
                 <img src="img/about.jpg"  alt="Image" class="img-fluid">
@@ -73,13 +74,13 @@ https://templatemo.com/tm-556-catalog-z
                         
 
                        
-                                   O nosso site vai ajudar pessoas a se conectarem a empresas com visão no futuro, dando oportunidades para novos profissionais recém formados que estão ingressando no mercado de trabalho.
+                                   O nosso site busca ajudar pessoas a se conectarem a empresas com visão no futuro, com vontade de dar oportunidades para novos profissionais recém formados que estão ingressando agora no mercado de trabalho.
                                 </p><p class="mb-4">
 
-                                Sabemos que novos trabalhadores podem ajudar as empresas a adquirir aprendizado para ambos os lados, responsabilidade social, profissionais sem vícios e estimular os estudos.</p>
+                                    todos acreditamos que novos trabalhadores podem trazer diversos benefícios as empresas. podemos adquirir aprendizado para ambos os lados, ajudar na responsabilidade social da empresa, eles também serão profissionais sem vícios e também estimula os estudos para assim continuar crescendo como profissional.</p>
 
                                 <p class="mb-4">
-                                Sabendo disso vamos focar em ajudar esse contato entre empresa e candidato</p>
+                                Sabendo disso nossa startup ajuda as empresas e candidatos a se encontrarem com a facilitação dessa  busca por novos funcionario e oportunidades para esses candidatos que estão entrando agora no mercado de trabalho.</p>
 
                 </div>                
             </div>
