--- a/FirstWork/about.html
+++ b/FirstWork/about.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-556-catalog-z
                     <a class="nav-link nav-link-4" href="contact.html">Contato</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link nav-link-4" href="cadastro.html">Faça o seu cadastro</a>
+                    <a class="nav-link nav-link-4" href="cadastro.html">Cadastro</a>
                 </li>
             </ul>
             </div>
