--- a/FirstWork/index.html
+++ b/FirstWork/index.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-556-catalog-z
                     <a class="nav-link nav-link-4" href="contact.html">Contato</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link nav-link-4" href="cadastro.html">Faça o seu cadastro</a>
+                    <a class="nav-link nav-link-4" href="cadastro.html">Cadastro</a>
                 </li>
             </ul>
             </div>
@@ -66,7 +66,7 @@ https://templatemo.com/tm-556-catalog-z
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
-                Categorias Trabalhistas
+                Categoria das vagas
             </h2>
             <div class="col-6 d-flex justify-content-end align-items-center">
                 <form action="" class="tm-text-primary">
