--- a/FirstWork/index.html
+++ b/FirstWork/index.html
@@ -26,7 +26,7 @@ https://templatemo.com/tm-556-catalog-z
     </div>-->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="./img/logotipo.png" width="200px" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
